# PCT

./: .gitignore  .gitmodules  Data_processing.ipynb  Encode.ipynb  GPencode.py  Makefile  README.md  TrajectoryHash.py  preprocess.ipynb
app/: Cargo.toml  Enclave_u.c  Enclave_u.h  build.rs
app/src/: central_data.rs  ecalls.rs  enc_util.rs  main.rs  query_data.rs  querydata.rs  util.rs
app/src/cpp/: encryption.cpp
data/: central.json  client-query-qs-10-cs-3.json  client-query-qs-100-cs-10.json  client-query-qs-5-cs-3.json
data/result/: ex-result-1591991367.txt
data/sample/: central.json  client-24-22-0-sample.csv  client-24-22-1-sample.csv  client.json  sample_query.json  server.csv
docker/: Dockerfile  docker-compose.yml
docker/script/: init.sh
enclave/: Cargo.toml  Enclave.config.xml  Enclave.edl  Enclave_t.c  Enclave_t.h  Makefile  build.rs
enclave/src/: buffers.rs  constant.rs  dictionary_buffer.rs  encode_finite_state_transducer.rs  encoded_dictionary_buffer.rs  encoded_hash_table.rs  encoded_query_buffer.rs  encoded_query_rep.rs  encoded_result_buffer.rs  fast_succinct_trie.rs  geohash_table.rs  geohash_table_with_period_array.rs  lib.rs  mapped_encoded_query_buffer.rs  mapped_query_buffer.rs  period.rs  primitive.rs  query_buffer.rs  query_rep.rs  query_result.rs  result_buffer.rs  types.rs  utils.rs
experiment/: README.md
experiment/sgxPSI/psi/: Makefile  app
experiment/sgxPSI/psi/App/: App.cpp  Enclave_u.c
experiment/sgxPSI/psi/Enclave/: BloomFilter.cpp  BloomFilter.h  Data.cpp  Enclave.config.xml  Enclave.cpp  Enclave.edl  Enclave_t.c
experiment/sgxPSI/src/: app
experiment/sgxPSI/src/App/: App.cpp  Enclave_u.h
fst/: README.md
fst/src/: lib.rs  set.rs
script/: generate-central-encoded-data.py  generate-central-random-data.py  generate-client-encoded-data.py  generate-client-random-data.py  generateCentralData.py  generateClientData.py  generateExternalData.py  generateResultSummary.py
script/ex/: ex1.sh
sgx-succinct-trie/: .gitignore  .travis.yml  Cargo.toml  README.md
sgx-succinct-trie/src/: bitvector.rs  builder.rs  config.rs  label_vector.rs  lib.rs  louds_dense.rs  louds_sparse.rs  rank.rs  select.rs  suffix.rs  trie.rs
sgx_fst/: Cargo.toml  README.md
sgx_fst/src/: lib.rs  map.rs  set.rs
sgx_fst/src/raw/: build.rs  error.rs  mod.rs  ops.rs  registry.rs
succinct-trie/: .gitignore  Cargo.toml  README.md
succinct-trie/src/: bitvector.rs  builder.rs  cache.rs  config.rs  label_vector.rs  lib.rs  louds_dense.rs  louds_sparse.rs  main.rs  popcount.rs  rank.rs  select.rs  trie.rs
tools/: README.md
tools/accurate_analysis/: .gitignore  Cargo.toml  README.md
tools/accurate_analysis/migrations/2021-05-26-005925_create_trajectory/: up.sql
tools/accurate_analysis/src/: main.rs  model.rs  schema.rs  utils.rs
tools/experiment/: README.md
tools/grid-encoding/: Cargo.toml  obliv_accuracy_evaluation.py
tools/grid-encoding/src/: main.rs  utils.rs
tools/python/: Encode.ipynb  TrajectoryHash.py
tools/trajectory/: .gitignore  README.md  generate.ipynb  generate.py  random.ipynb  random.py  random_gen.py  realdata.ipynb  requirements.txt  visualize.ipynb
tools/trajectory_hash/: Cargo.toml  README.md
tools/trajectory_hash/src/: main.rs  utils.rs
trajectory_hash/: Cargo.toml
trajectory_hash/src/: main.rs  utils.rs
(+3 files in other folders)
