[package]
name = "app"
version = "1.0.0"
authors = ["The Teaclave Authors"]
build = "build.rs"

[dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_urts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version= "1.0" }
hex = { version = "0.4", default-features = false }
savefile = { version="0.2.11" }
savefile-derive = { version="0.6.1" }
fst = { path  = "/root/sgx/samplecode/PCT/fst" }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_types = { path = "../../../sgx_types" }
sgx_urts = { path = "../../../sgx_urts" }

