[package]
name = "app"
version = "1.0.0"
authors = ["The Teaclave Authors"]
links = "encryption"
build = "build.rs"

[dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_urts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
bincode = { version = "1.3.1"}
hex = { version = "0.4" }
savefile = { version ="0.7" }
savefile-derive = { version ="0.6.1" }
fst = { path  = "/root/sgx/samplecode/PCT/fst" }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_types = { path = "../../../sgx_types" }
sgx_urts = { path = "../../../sgx_urts" }

[build-dependencies]
cc = "1.0"

[profile.release]
opt-level = 3

[features]
default = []
th72 = []
th48 = []
th60 = []
th54 = []
gp10 = []
fsa = []
hashtable = []
