[package]
name = "app"
version = "1.0.0"
authors = ["The Teaclave Authors"]
links = "encryption"
build = "build.rs"

[dependencies]
sgx_types = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_urts = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
bincode = { version = "1.3.1"}
hex = { version = "0.4" }
savefile = { version ="0.7" }
savefile-derive = { version ="0.6.1" }
succinct-trie = { path = "../succinct-trie" }
glob = "0.3.0"
regex = "1.5"
clap = "3.0.0-beta.2"

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_types = { path = "../../../sgx_types" }
sgx_urts = { path = "../../../sgx_urts" }

[build-dependencies]
cc = "1.0"

[profile.release]
opt-level = 3

[features]
default = []
nfp = []
st = []
fsa = []
hashtable = []
