[package]
name = "sgx_fst"
version = "0.1.0"
authors = ["FumiyukiKato <fumilemon79@gmail.com>"]
keywords = ["search", "information", "retrieval", "dictionary", "map"]
license = "Unlicense/MIT"
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }