[package]
name = "accurate_analysis"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
csv = "1.1"
diesel = { version = "1.4.4", features = ["sqlite"] }
dotenv = "0.9.0"
savefile = "0.7.4"
glob = "0.3.0"
regex = "1.5"